Revert "added parameterized test for getAllByDifferentParameters method in HabitSeviceImplTest"
This reverts commit 13d0b2acb19bfc6ade61e41b5d906e54ebd5ccd9.