@@ -10,8 +10,6 @@ import greencity.dto.habittranslation.HabitTranslationDto;
 import greencity.dto.shoppinglistitem.CustomShoppingListItemResponseDto;
 import greencity.dto.shoppinglistitem.ShoppingListItemDto;
 import greencity.dto.user.UserProfilePictureDto;
-import greencity.dto.user.UserStatusDto;
-import greencity.dto.user.UserVO;
 import greencity.entity.CustomShoppingListItem;
 import greencity.entity.Habit;
 import greencity.entity.HabitTranslation;
@@ -19,8 +17,6 @@ import greencity.entity.Language;
 import greencity.entity.Tag;
 import greencity.entity.User;
 import greencity.entity.localization.ShoppingListItemTranslation;
-import greencity.enums.Role;
-import greencity.enums.UserStatus;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.WrongEmailException;
 import greencity.mapping.CustomShoppingListResponseDtoMapper;
@@ -52,15 +48,23 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.nullable;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -125,7 +129,8 @@ class HabitServiceImplTest {
         habitDto.setIsCustomHabit(false);
         HabitTranslation habitTranslation = ModelUtils.getHabitTranslation();
         when(habitRepo.findById(1L)).thenReturn(Optional.of(habit));
-        when(habitTranslationRepo.findByHabitAndLanguageCode(habit, "en")).thenReturn(Optional.of(habitTranslation));
+        when(habitTranslationRepo.findByHabitAndLanguageCode(habit, "en"))
+            .thenReturn(Optional.of(habitTranslation));
         when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
         when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
         assertEquals(habitDto, habitService.getByIdAndLanguageCode(1L, "en"));
@@ -146,7 +151,8 @@ class HabitServiceImplTest {
         habitDto.setCustomShoppingListItems(List.of(ModelUtils.getCustomShoppingListItemResponseDto()));
         HabitTranslation habitTranslation = ModelUtils.getHabitTranslation();
         when(habitRepo.findById(1L)).thenReturn(Optional.of(habit));
-        when(habitTranslationRepo.findByHabitAndLanguageCode(habit, "en")).thenReturn(Optional.of(habitTranslation));
+        when(habitTranslationRepo.findByHabitAndLanguageCode(habit, "en"))
+            .thenReturn(Optional.of(habitTranslation));
         when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
         when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
         assertEquals(habitDto, habitService.getByIdAndLanguageCode(1L, "en"));
@@ -172,13 +178,15 @@ class HabitServiceImplTest {
     void getAllHabitsByLanguageCode() {
         Pageable pageable = PageRequest.of(0, 2);
         HabitTranslation habitTranslation = ModelUtils.getHabitTranslation();
-        Page<HabitTranslation> habitTranslationPage = new PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
+        Page<HabitTranslation> habitTranslationPage =
+            new PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
         HabitDto habitDto = ModelUtils.getHabitDto();
         when(habitTranslationRepo.findAllByLanguageCode(pageable, "en")).thenReturn(habitTranslationPage);
         when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
         when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
         List<HabitDto> habitDtoList = Collections.singletonList(habitDto);
-        PageableDto pageableDto = new PageableDto(habitDtoList, habitTranslationPage.getTotalElements(), habitTranslationPage.getPageable().getPageNumber(), habitTranslationPage.getTotalPages());
+        PageableDto pageableDto = new PageableDto(habitDtoList, habitTranslationPage.getTotalElements(),
+            habitTranslationPage.getPageable().getPageNumber(), habitTranslationPage.getTotalPages());
         assertEquals(pageableDto, habitService.getAllHabitsByLanguageCode(pageable, "en"));
     }
 
@@ -190,147 +198,128 @@ class HabitServiceImplTest {
         List<String> lowerCaseTags = Collections.singletonList(tag.toLowerCase());
         HabitTranslation habitTranslation = ModelUtils.getHabitTranslation();
         HabitDto habitDto = ModelUtils.getHabitDto();
-        Page<HabitTranslation> habitTranslationPage = new PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
+        Page<HabitTranslation> habitTranslationPage =
+            new PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
         List<HabitDto> habitDtoList = Collections.singletonList(habitDto);
-        PageableDto pageableDto = new PageableDto(habitDtoList, habitTranslationPage.getTotalElements(), habitTranslationPage.getPageable().getPageNumber(), habitTranslationPage.getTotalPages());
+        PageableDto pageableDto = new PageableDto(habitDtoList, habitTranslationPage.getTotalElements(),
+            habitTranslationPage.getPageable().getPageNumber(), habitTranslationPage.getTotalPages());
         when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
         when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
-        when(habitTranslationRepo.findAllByTagsAndLanguageCode(pageable, lowerCaseTags, "en")).thenReturn(habitTranslationPage);
+        when(habitTranslationRepo.findAllByTagsAndLanguageCode(pageable, lowerCaseTags, "en"))
+            .thenReturn(habitTranslationPage);
         assertEquals(pageableDto, habitService.getAllByTagsAndLanguageCode(pageable, tags, "en"));
     }
 
     private static Stream<Arguments> getAllByDifferentParametersArguments() {
         return Stream.of(
-                arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.of(List.of(1))),
-                arguments(Optional.empty(), Optional.of(true), Optional.of(List.of(1))),
-                arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(), Optional.of(List.of(1))),
-                arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.empty()),
-                arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(), Optional.empty()),
-                arguments(Optional.empty(), Optional.empty(), Optional.of(List.of(1))),
-                arguments(Optional.empty(), Optional.of(true), Optional.empty()));
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.of(List.of(1))),
+            arguments(Optional.empty(), Optional.of(true), Optional.of(List.of(1))),
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(), Optional.of(List.of(1))),
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.empty()),
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(),
+                Optional.empty()),
+            arguments(Optional.empty(), Optional.empty(), Optional.of(List.of(1))),
+            arguments(Optional.empty(), Optional.of(true), Optional.empty()));
     }
-
-    @ParameterizedTest
-    @MethodSource("getAllByDifferentParametersArguments")
-    void getAllByDifferentParameters(Optional<List<String>> tags, Optional<Boolean> isCustomHabit, Optional<List<Integer>> complexities) {
-
-        Pageable pageable = PageRequest.of(0, 2);
-        String tag = "HABIT";
-        List<String> lowerCaseTags = Collections.singletonList(tag.toLowerCase());
-        HabitTranslation habitTranslation = ModelUtils.getHabitTranslationWithCustom();
-        HabitDto habitDto = ModelUtils.getHabitDto();
-        Page<HabitTranslation> habitTranslationPage = new PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
-        List<HabitDto> habitDtoList = Collections.singletonList(habitDto);
-        PageableDto pageableDto = new PageableDto(habitDtoList, habitTranslationPage.getTotalElements(),
-                habitTranslationPage.getPageable().getPageNumber(), habitTranslationPage.getTotalPages());
-
-        List<Long> userIds = userRepo.getAllUserFriends(1L).stream().map(User::getId).collect(Collectors.toList());
-
-        when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
-        when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
-        when(habitRepo.findById(1L)).thenReturn(Optional.ofNullable(ModelUtils.getHabitWithCustom()));
-        List<User> users = Collections.singletonList(ModelUtils.getUser());
-        when(userRepo.getAllUserFriends(ModelUtils.getUser().getId())).thenReturn(users);
-
-        when(habitTranslationRepo.findAllByDifferentParametersIsCustomHabitTrue(any(Pageable.class), anyList(), any(), anyString(), anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByDifferentParametersIsCustomHabitFalse(any(Pageable.class), anyList(), any(),
-                anyString())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByTagsAndIsCustomHabitTrueAndLanguageCode(any(Pageable.class), anyList(),
-                anyString(), anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByTagsAndIsCustomHabitFalseAndLanguageCode(any(Pageable.class), anyList(), anyString()))
-                .thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByIsCustomHabitTrueAndComplexityAndLanguageCode(any(Pageable.class), any(), anyString(),
-                anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByIsCustomHabitFalseAndComplexityAndLanguageCode(any(Pageable.class), any(), anyString())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByTagsAndComplexityAndLanguageCodeForAvailableUsersIfIsCustomTrue(any(Pageable.class), anyList(), any(), anyString(),
-                anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByIsCustomHabitTrueAndLanguageCode(any(Pageable.class), anyString(), anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByIsCustomFalseHabitAndLanguageCode(any(Pageable.class), anyString())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByTagsAndLanguageCodeAndForAvailableUsersIfIsCustomHabitTrue(any(Pageable.class), any(), anyString(),
-                anyList())).thenReturn(habitTranslationPage);
-        when(habitTranslationRepo.findAllByComplexityAndLanguageCodeAndForAvailableUsersIfIsCustomHabit(any(Pageable.class), any(), anyString(),
-                anyList())).thenReturn(habitTranslationPage);
-
-        if (isCustomHabit.isPresent() && tags.isPresent() && complexities.isPresent()) {
-            if (isCustomHabit.get()) {
-                habitTranslationRepo.findAllByDifferentParametersIsCustomHabitTrue(pageable, lowerCaseTags, complexities, "en", userIds);
-            } else {
-                habitTranslationRepo.findAllByDifferentParametersIsCustomHabitFalse(pageable, lowerCaseTags, complexities, "en");
-            }
-        } else if (isCustomHabit.isPresent() && tags.isPresent()) {
-            if (isCustomHabit.get()) {
-                habitTranslationRepo.findAllByTagsAndIsCustomHabitTrueAndLanguageCode(pageable, lowerCaseTags, "en", userIds);
-            } else {
-                habitTranslationRepo.findAllByTagsAndIsCustomHabitFalseAndLanguageCode(pageable, lowerCaseTags, "en");
-            }
-        } else if (isCustomHabit.isPresent() && complexities.isPresent()) {
-            if (isCustomHabit.get()) {
-                habitTranslationRepo.findAllByIsCustomHabitTrueAndComplexityAndLanguageCode(pageable, complexities, "en", userIds);
-            } else {
-                habitTranslationRepo.findAllByIsCustomHabitFalseAndComplexityAndLanguageCode(pageable, complexities, "en");
-            }
-        } else if (complexities.isPresent() && tags.isPresent()) {
-            habitTranslationRepo.findAllByTagsAndComplexityAndLanguageCodeForAvailableUsersIfIsCustomTrue(pageable, lowerCaseTags, complexities, "en", userIds);
-        } else if (isCustomHabit.isPresent()) {
-            if (isCustomHabit.get()) {
-                habitTranslationRepo.findAllByIsCustomHabitTrueAndLanguageCode(pageable, "en", userIds);
-            } else {
-                habitTranslationRepo.findAllByIsCustomFalseHabitAndLanguageCode(pageable, "en");
-            }
-        } else if (tags.isPresent()) {
-            habitTranslationRepo.findAllByTagsAndLanguageCodeAndForAvailableUsersIfIsCustomHabitTrue(pageable, lowerCaseTags,"en", userIds);
-        } else if (complexities.isPresent()) {
-            habitTranslationRepo.findAllByComplexityAndLanguageCodeAndForAvailableUsersIfIsCustomHabit(pageable, complexities, "en", userIds);
-        }
-
-        assertEquals(pageableDto, habitService.getAllByDifferentParameters(ModelUtils.getUserVO(), pageable, tags, isCustomHabit, complexities, "en"));
-
-
-        verify(modelMapper).map(habitTranslation, HabitDto.class);
-        verify(habitAssignRepo).findAmountOfUsersAcquired(anyLong());
-        verify(habitRepo).findById(1L);
-
-        if (isCustomHabit.isPresent() && tags.isPresent() && complexities.isPresent()) {
-            if (isCustomHabit.get()) {
-                verify(habitTranslationRepo).findAllByDifferentParametersIsCustomHabitTrue(pageable, lowerCaseTags, complexities, "en", userIds);
-            } else {
-                verify(habitTranslationRepo).findAllByDifferentParametersIsCustomHabitFalse(pageable, lowerCaseTags, complexities, "en");
-            }
-        } else if (isCustomHabit.isPresent() && tags.isPresent()) {
-            if (isCustomHabit.get()) {
-                verify(habitTranslationRepo).findAllByTagsAndIsCustomHabitTrueAndLanguageCode(pageable, lowerCaseTags, "en", userIds);
-            } else {
-                verify(habitTranslationRepo).findAllByTagsAndIsCustomHabitFalseAndLanguageCode(pageable, lowerCaseTags, "en");
-            }
-        } else if (isCustomHabit.isPresent() && complexities.isPresent()) {
-            if (isCustomHabit.get()) {
-                verify(habitTranslationRepo).findAllByIsCustomHabitTrueAndComplexityAndLanguageCode(pageable, complexities, "en", userIds);
-            } else {
-                verify(habitTranslationRepo).findAllByIsCustomHabitFalseAndComplexityAndLanguageCode(pageable, complexities, "en");
-            }
-        } else if (complexities.isPresent() && tags.isPresent()) {
-            verify(habitTranslationRepo).findAllByTagsAndComplexityAndLanguageCodeForAvailableUsersIfIsCustomTrue(pageable, lowerCaseTags, complexities, "en", userIds);
-        } else if (isCustomHabit.isPresent()) {
-            if (isCustomHabit.get()) {
-                verify(habitTranslationRepo).findAllByIsCustomHabitTrueAndLanguageCode(pageable, "en", userIds);
-            } else {
-                verify(habitTranslationRepo).findAllByIsCustomFalseHabitAndLanguageCode(pageable, "en");
-            }
-        } else if (tags.isPresent()) {
-            verify(habitTranslationRepo).findAllByTagsAndLanguageCodeAndForAvailableUsersIfIsCustomHabitTrue(pageable, lowerCaseTags, "en", userIds);
-        } else if (complexities.isPresent()) {
-            verify(habitTranslationRepo).findAllByComplexityAndLanguageCodeAndForAvailableUsersIfIsCustomHabit(pageable, complexities, "en", userIds);
-        }
-    }
+    /*
+     * 
+     * @ParameterizedTest
+     * 
+     * @MethodSource("getAllByDifferentParametersArguments") void
+     * getAllByDifferentParameters(Optional<List<String>> tags, Optional<Boolean>
+     * isCustomHabit, Optional<List<Integer>> complexities) { Pageable pageable =
+     * PageRequest.of(0, 2); String tag = "HABIT";
+     * 
+     * List<String> lowerCaseTags = Collections.singletonList(tag.toLowerCase());
+     * HabitTranslation habitTranslation =
+     * ModelUtils.getHabitTranslationWithCustom(); HabitDto habitDto =
+     * ModelUtils.getHabitDto(); Page<HabitTranslation> habitTranslationPage = new
+     * PageImpl<>(Collections.singletonList(habitTranslation), pageable, 10);
+     * List<HabitDto> habitDtoList = Collections.singletonList(habitDto);
+     * PageableDto pageableDto = new PageableDto(habitDtoList,
+     * habitTranslationPage.getTotalElements(),
+     * habitTranslationPage.getPageable().getPageNumber(),
+     * habitTranslationPage.getTotalPages());
+     * 
+     * when(modelMapper.map(habitTranslation, HabitDto.class)).thenReturn(habitDto);
+     * when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
+     * when(habitRepo.findById(1L)).thenReturn(Optional.ofNullable(ModelUtils.
+     * getHabitWithCustom()));
+     * 
+     * if (isCustomHabit.isPresent() && tags.isPresent() &&
+     * complexities.isPresent()) {
+     * when(habitTranslationRepo.findAllByDifferentParameters(pageable,
+     * lowerCaseTags, isCustomHabit, complexities,
+     * "en")).thenReturn(habitTranslationPage); } else if (complexities.isPresent()
+     * && isCustomHabit.isPresent()) {
+     * when(habitTranslationRepo.findAllByIsCustomHabitAndComplexityAndLanguageCode(
+     * pageable, isCustomHabit, complexities,
+     * "en")).thenReturn(habitTranslationPage); } else if (complexities.isPresent()
+     * && tags.isPresent()) {
+     * when(habitTranslationRepo.findAllByTagsAndComplexityAndLanguageCode(pageable,
+     * lowerCaseTags, complexities, "en")).thenReturn(habitTranslationPage); } else
+     * if (isCustomHabit.isPresent() && tags.isPresent()) {
+     * when(habitTranslationRepo.findAllByTagsAndIsCustomHabitAndLanguageCode(
+     * pageable, lowerCaseTags, isCustomHabit,
+     * "en")).thenReturn(habitTranslationPage); } else if (tags.isPresent()) {
+     * when(habitTranslationRepo.findAllByTagsAndLanguageCode(pageable,
+     * lowerCaseTags, "en")).thenReturn(habitTranslationPage); } else if
+     * (complexities.isPresent()) {
+     * 
+     * when(habitTranslationRepo.findAllByComplexityAndLanguageCode(pageable,
+     * complexities, "en")).thenReturn(habitTranslationPage);
+     * 
+     * } else if (isCustomHabit.isPresent()) {
+     * when(habitTranslationRepo.findAllByIsCustomHabitAndLanguageCode(pageable,
+     * isCustomHabit, "en")).thenReturn(habitTranslationPage); } else { assertFalse(
+     * (tags.isPresent() && !tags.get().isEmpty()) || isCustomHabit.isPresent() ||
+     * (complexities.isPresent() && !complexities.get().isEmpty())); }
+     * 
+     * 
+     * assertEquals(pageableDto, habitService.getAllByDifferentParameters(pageable,
+     * tags, isCustomHabit, complexities, "en"));
+     * 
+     * 
+     * verify(modelMapper).map(habitTranslation, HabitDto.class);
+     * verify(habitAssignRepo).findAmountOfUsersAcquired(anyLong());
+     * verify(habitRepo).findById(1L);
+     * 
+     * if (isCustomHabit.isPresent() && tags.isPresent() &&
+     * complexities.isPresent()) {
+     * verify(habitTranslationRepo).findAllByDifferentParameters(pageable,
+     * lowerCaseTags, isCustomHabit, complexities, "en"); } else if
+     * (complexities.isPresent() && isCustomHabit.isPresent()) {
+     * verify(habitTranslationRepo).
+     * findAllByIsCustomHabitAndComplexityAndLanguageCode(pageable, isCustomHabit,
+     * complexities, "en"); } else if (complexities.isPresent() && tags.isPresent())
+     * { verify(habitTranslationRepo).findAllByTagsAndComplexityAndLanguageCode(
+     * pageable, lowerCaseTags, complexities, "en"); } else if
+     * (isCustomHabit.isPresent() && tags.isPresent()) {
+     * verify(habitTranslationRepo).findAllByTagsAndIsCustomHabitAndLanguageCode(
+     * pageable, lowerCaseTags, isCustomHabit, "en"); } else if (tags.isPresent()) {
+     * verify(habitTranslationRepo).findAllByTagsAndLanguageCode(pageable,
+     * lowerCaseTags, "en"); } else if (complexities.isPresent()) {
+     * 
+     * verify(habitTranslationRepo).findAllByComplexityAndLanguageCode(pageable,
+     * complexities, "en");
+     * 
+     * } else if (isCustomHabit.isPresent()) {
+     * verify(habitTranslationRepo).findAllByIsCustomHabitAndLanguageCode(pageable,
+     * isCustomHabit, "en"); } else { assertFalse( (tags.isPresent() &&
+     * !tags.get().isEmpty()) || isCustomHabit.isPresent() ||
+     * (complexities.isPresent() && !complexities.get().isEmpty())); } }
+     */
 
     @Test
     void getShoppingListForHabit() {
         ShoppingListItemTranslation shoppingListItemTranslation = ModelUtils.getShoppingListItemTranslation();
-        List<ShoppingListItemTranslation> shoppingListItemTranslations = Collections.singletonList(shoppingListItemTranslation);
+        List<ShoppingListItemTranslation> shoppingListItemTranslations =
+            Collections.singletonList(shoppingListItemTranslation);
         ShoppingListItemDto shoppingListItemDto = new ShoppingListItemDto(1L, "test", "ACTIVE");
         List<ShoppingListItemDto> shoppingListItemDtos = Collections.singletonList(shoppingListItemDto);
         when(modelMapper.map(shoppingListItemTranslation, ShoppingListItemDto.class)).thenReturn(shoppingListItemDto);
-        when(shoppingListItemTranslationRepo.findShoppingListByHabitIdAndByLanguageCode("en", 1l)).thenReturn(shoppingListItemTranslations);
+        when(shoppingListItemTranslationRepo.findShoppingListByHabitIdAndByLanguageCode("en", 1l))
+            .thenReturn(shoppingListItemTranslations);
         assertEquals(shoppingListItemDtos, habitService.getShoppingListForHabit(1L, "en"));
     }
 
@@ -376,7 +365,8 @@ class HabitServiceImplTest {
         habit.setTags(Set.of(tag));
         habit.setUserId(1L);
         habit.setImage(imageToEncode);
-        CustomShoppingListItemResponseDto customShoppingListItemResponseDto = ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
+        CustomShoppingListItemResponseDto customShoppingListItemResponseDto =
+            ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
         CustomShoppingListItem customShoppingListItem = ModelUtils.getCustomShoppingListItemForServiceTest();
 
         AddCustomHabitDtoRequest addCustomHabitDtoRequest = ModelUtils.getAddCustomHabitDtoRequestForServiceTest();
@@ -386,27 +376,35 @@ class HabitServiceImplTest {
 
         HabitTranslationDto habitTranslationDto = ModelUtils.getHabitTranslationDto();
 
-        List<HabitTranslationDto> habitTranslationDtoList = List.of(habitTranslationDto.setLanguageCode("en"), habitTranslationDto.setLanguageCode("ua"));
+        List<HabitTranslationDto> habitTranslationDtoList = List.of(
+            habitTranslationDto.setLanguageCode("en"),
+            habitTranslationDto.setLanguageCode("ua"));
 
         HabitTranslation habitTranslationUa = ModelUtils.getHabitTranslationForServiceTest();
-        List<HabitTranslation> habitTranslationList = List.of(habitTranslationUa.setLanguage(languageEn), habitTranslationUa.setLanguage(languageUa));
+        List<HabitTranslation> habitTranslationList = List.of(
+            habitTranslationUa.setLanguage(languageEn),
+            habitTranslationUa.setLanguage(languageUa));
 
         when(userRepo.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(habit);
         when(tagsRepo.findById(20L)).thenReturn(Optional.of(tag));
-        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto))).thenReturn(List.of(habitTranslationUa));
+        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto)))
+            .thenReturn(List.of(habitTranslationUa));
         when(languageRepo.findByCode("ua")).thenReturn(Optional.of(languageUa));
         when(languageRepo.findByCode("en")).thenReturn(Optional.of(languageEn));
         when(customShoppingListItemRepo.findAllByUserIdAndHabitId(1L, 1L)).thenReturn(List.of(customShoppingListItem));
-        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto))).thenReturn(List.of(customShoppingListItem));
+        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto)))
+            .thenReturn(List.of(customShoppingListItem));
         when(modelMapper.map(habit, AddCustomHabitDtoResponse.class)).thenReturn(addCustomHabitDtoResponse);
-        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem))).thenReturn(List.of(customShoppingListItemResponseDto));
+        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem)))
+            .thenReturn(List.of(customShoppingListItemResponseDto));
         when(habitTranslationRepo.findAllByHabit(habit)).thenReturn(habitTranslationList);
         when(habitTranslationDtoMapper.mapAllToList(habitTranslationList)).thenReturn(habitTranslationDtoList);
 
         when(fileService.upload(image)).thenReturn(imageToEncode);
 
-        assertEquals(addCustomHabitDtoResponse, habitService.addCustomHabit(addCustomHabitDtoRequest, null, "taras@gmail.com"));
+        assertEquals(addCustomHabitDtoResponse,
+            habitService.addCustomHabit(addCustomHabitDtoRequest, null, "taras@gmail.com"));
 
         verify(userRepo).findByEmail(user.getEmail());
         verify(habitRepo).save(customHabitMapper.convert(addCustomHabitDtoRequest));
@@ -435,7 +433,8 @@ class HabitServiceImplTest {
         habit.setTags(Set.of(tag));
         habit.setUserId(1L);
         habit.setImage(imageToEncode);
-        CustomShoppingListItemResponseDto customShoppingListItemResponseDto = ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
+        CustomShoppingListItemResponseDto customShoppingListItemResponseDto =
+            ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
         CustomShoppingListItem customShoppingListItem = ModelUtils.getCustomShoppingListItemForServiceTest();
 
         AddCustomHabitDtoRequest addCustomHabitDtoRequest = ModelUtils.getAddCustomHabitDtoRequestForServiceTest();
@@ -444,27 +443,35 @@ class HabitServiceImplTest {
 
         HabitTranslationDto habitTranslationDto = ModelUtils.getHabitTranslationDto();
 
-        List<HabitTranslationDto> habitTranslationDtoList = List.of(habitTranslationDto.setLanguageCode("en"), habitTranslationDto.setLanguageCode("ua"));
+        List<HabitTranslationDto> habitTranslationDtoList = List.of(
+            habitTranslationDto.setLanguageCode("en"),
+            habitTranslationDto.setLanguageCode("ua"));
 
         HabitTranslation habitTranslationUa = ModelUtils.getHabitTranslationForServiceTest();
-        List<HabitTranslation> habitTranslationList = List.of(habitTranslationUa.setLanguage(languageEn), habitTranslationUa.setLanguage(languageUa));
+        List<HabitTranslation> habitTranslationList = List.of(
+            habitTranslationUa.setLanguage(languageEn),
+            habitTranslationUa.setLanguage(languageUa));
 
         when(userRepo.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(habit);
         when(tagsRepo.findById(20L)).thenReturn(Optional.of(tag));
-        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto))).thenReturn(List.of(habitTranslationUa));
+        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto)))
+            .thenReturn(List.of(habitTranslationUa));
         when(languageRepo.findByCode("ua")).thenReturn(Optional.of(languageUa));
         when(languageRepo.findByCode("en")).thenReturn(Optional.of(languageEn));
         when(customShoppingListItemRepo.findAllByUserIdAndHabitId(1L, 1L)).thenReturn(List.of(customShoppingListItem));
-        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto))).thenReturn(List.of(customShoppingListItem));
+        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto)))
+            .thenReturn(List.of(customShoppingListItem));
         when(modelMapper.map(habit, AddCustomHabitDtoResponse.class)).thenReturn(addCustomHabitDtoResponse);
-        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem))).thenReturn(List.of(customShoppingListItemResponseDto));
+        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem)))
+            .thenReturn(List.of(customShoppingListItemResponseDto));
         when(habitTranslationRepo.findAllByHabit(habit)).thenReturn(habitTranslationList);
         when(habitTranslationDtoMapper.mapAllToList(habitTranslationList)).thenReturn(habitTranslationDtoList);
 
         when(fileService.upload(image)).thenReturn(imageToEncode);
 
-        assertEquals(addCustomHabitDtoResponse, habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
+        assertEquals(addCustomHabitDtoResponse,
+            habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
 
         verify(userRepo).findByEmail(user.getEmail());
         verify(habitRepo).save(customHabitMapper.convert(addCustomHabitDtoRequest));
@@ -493,7 +500,8 @@ class HabitServiceImplTest {
         habit.setTags(Set.of(tag));
         habit.setUserId(1L);
         habit.setImage(imageToEncode);
-        CustomShoppingListItemResponseDto customShoppingListItemResponseDto = ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
+        CustomShoppingListItemResponseDto customShoppingListItemResponseDto =
+            ModelUtils.getCustomShoppingListItemResponseDtoForServiceTest();
         CustomShoppingListItem customShoppingListItem = ModelUtils.getCustomShoppingListItemForServiceTest();
 
         AddCustomHabitDtoRequest addCustomHabitDtoRequest = ModelUtils.getAddCustomHabitDtoRequestForServiceTest();
@@ -502,27 +510,35 @@ class HabitServiceImplTest {
 
         HabitTranslationDto habitTranslationDto = ModelUtils.getHabitTranslationDto();
 
-        List<HabitTranslationDto> habitTranslationDtoList = List.of(habitTranslationDto.setLanguageCode("en"), habitTranslationDto.setLanguageCode("ua"));
+        List<HabitTranslationDto> habitTranslationDtoList = List.of(
+            habitTranslationDto.setLanguageCode("en"),
+            habitTranslationDto.setLanguageCode("ua"));
 
         HabitTranslation habitTranslationUa = ModelUtils.getHabitTranslationForServiceTest();
-        List<HabitTranslation> habitTranslationList = List.of(habitTranslationUa.setLanguage(languageEn), habitTranslationUa.setLanguage(languageUa));
+        List<HabitTranslation> habitTranslationList = List.of(
+            habitTranslationUa.setLanguage(languageEn),
+            habitTranslationUa.setLanguage(languageUa));
 
         when(userRepo.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(habit);
         when(tagsRepo.findById(20L)).thenReturn(Optional.of(tag));
-        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto))).thenReturn(List.of(habitTranslationUa));
+        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto)))
+            .thenReturn(List.of(habitTranslationUa));
         when(languageRepo.findByCode("ua")).thenReturn(Optional.of(languageUa));
         when(languageRepo.findByCode("en")).thenReturn(Optional.of(languageEn));
         when(customShoppingListItemRepo.findAllByUserIdAndHabitId(1L, 1L)).thenReturn(List.of(customShoppingListItem));
-        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto))).thenReturn(List.of(customShoppingListItem));
+        when(customShoppingListMapper.mapAllToList(List.of(customShoppingListItemResponseDto)))
+            .thenReturn(List.of(customShoppingListItem));
         when(modelMapper.map(habit, AddCustomHabitDtoResponse.class)).thenReturn(addCustomHabitDtoResponse);
-        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem))).thenReturn(List.of(customShoppingListItemResponseDto));
+        when(customShoppingListResponseDtoMapper.mapAllToList(List.of(customShoppingListItem)))
+            .thenReturn(List.of(customShoppingListItemResponseDto));
         when(habitTranslationRepo.findAllByHabit(habit)).thenReturn(habitTranslationList);
         when(habitTranslationDtoMapper.mapAllToList(habitTranslationList)).thenReturn(habitTranslationDtoList);
 
         when(fileService.upload(image)).thenReturn(imageToEncode);
 
-        assertEquals(addCustomHabitDtoResponse, habitService.addCustomHabit(addCustomHabitDtoRequest, null, "taras@gmail.com"));
+        assertEquals(addCustomHabitDtoResponse,
+            habitService.addCustomHabit(addCustomHabitDtoRequest, null, "taras@gmail.com"));
 
         verify(userRepo).findByEmail(user.getEmail());
         verify(habitRepo).save(customHabitMapper.convert(addCustomHabitDtoRequest));
@@ -557,10 +573,12 @@ class HabitServiceImplTest {
         when(userRepo.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(habit);
         when(tagsRepo.findById(20L)).thenReturn(Optional.of(tag));
-        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto))).thenReturn(List.of(habitTranslation));
+        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto)))
+            .thenReturn(List.of(habitTranslation));
         when(languageRepo.findByCode("ua")).thenReturn(Optional.empty());
 
-        assertThrows(NoSuchElementException.class, () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
+        assertThrows(NoSuchElementException.class,
+            () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
 
         verify(userRepo).findByEmail(user.getEmail());
         verify(habitRepo).save(customHabitMapper.convert(addCustomHabitDtoRequest));
@@ -589,11 +607,13 @@ class HabitServiceImplTest {
         when(userRepo.findByEmail(user.getEmail())).thenReturn(Optional.of(user));
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(habit);
         when(tagsRepo.findById(20L)).thenReturn(Optional.of(tag));
-        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto))).thenReturn(List.of(habitTranslationUa));
+        when(habitTranslationMapper.mapAllToList(List.of(habitTranslationDto)))
+            .thenReturn(List.of(habitTranslationUa));
         when(languageRepo.findByCode("ua")).thenReturn(Optional.of(languageUa));
         when(languageRepo.findByCode("en")).thenReturn(Optional.empty());
 
-        assertThrows(NoSuchElementException.class, () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
+        assertThrows(NoSuchElementException.class,
+            () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "taras@gmail.com"));
 
         verify(userRepo).findByEmail(user.getEmail());
         verify(habitRepo).save(customHabitMapper.convert(addCustomHabitDtoRequest));
@@ -611,7 +631,8 @@ class HabitServiceImplTest {
         when(userRepo.findByEmail("user@gmail.com")).thenReturn(Optional.empty());
         when(habitRepo.save(customHabitMapper.convert(addCustomHabitDtoRequest))).thenReturn(nullable(Habit.class));
 
-        assertThrows(WrongEmailException.class, () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "user@gmail.com"));
+        assertThrows(WrongEmailException.class,
+            () -> habitService.addCustomHabit(addCustomHabitDtoRequest, image, "user@gmail.com"));
 
         verify(userRepo).findByEmail("user@gmail.com");
         verify(customHabitMapper).convert(addCustomHabitDtoRequest);
@@ -625,7 +646,11 @@ class HabitServiceImplTest {
         User friend = ModelUtils.getUser();
         friend.setId(friendId);
         friend.setProfilePicturePath("test");
-        UserProfilePictureDto friendProfilePicture = UserProfilePictureDto.builder().id(friend.getId()).name(friend.getName()).profilePicturePath(friend.getProfilePicturePath()).build();
+        UserProfilePictureDto friendProfilePicture = UserProfilePictureDto.builder()
+            .id(friend.getId())
+            .name(friend.getName())
+            .profilePicturePath(friend.getProfilePicturePath())
+            .build();
 
         when(userRepo.existsById(userId)).thenReturn(true);
         when(habitRepo.existsById(habitId)).thenReturn(true);
@@ -649,7 +674,8 @@ class HabitServiceImplTest {
 
         when(userRepo.existsById(userId)).thenReturn(false);
 
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> habitService.getFriendsAssignedToHabitProfilePictures(habitId, userId));
+        NotFoundException exception = assertThrows(NotFoundException.class,
+            () -> habitService.getFriendsAssignedToHabitProfilePictures(habitId, userId));
 
         assertEquals(ErrorMessage.USER_NOT_FOUND_BY_ID + userId, exception.getMessage());
 
@@ -667,7 +693,8 @@ class HabitServiceImplTest {
         when(userRepo.existsById(userId)).thenReturn(true);
         when(habitRepo.existsById(userId)).thenReturn(false);
 
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> habitService.getFriendsAssignedToHabitProfilePictures(habitId, userId));
+        NotFoundException exception = assertThrows(NotFoundException.class,
+            () -> habitService.getFriendsAssignedToHabitProfilePictures(habitId, userId));
 
         assertEquals(ErrorMessage.HABIT_NOT_FOUND_BY_ID + habitId, exception.getMessage());
 
